      (RT #71799, thanks to jeff@math.tntech.edu), this returns the behaviour
      to pre e24d04e9bc5fda7722444b02fec135d8cc2ff488 but with the undefined
      fix still in place
    - fix warnings when QUERY_STRING has empty key=value pairs (RT #54511)
    - pad custom 500 status response messages to > 512 for MSIE (RT #81946)

    [ TESTING ]
    - add .travis.yml (https://travis-ci.org)
    - test case for RT #53966 - disallow filenames with ~ char
    - test case for RT #55166 - calling Vars to get the filename does not return
      a filehandle, so this cannot be used in the call to uploadinfo, also
      update documentation for the uploadInfo to show that ->Vars should not be
      used to get the filename for this method
    - fix t/url.t to pass on Win32 platforms that have the SCRIPT_NAME env
      variable set (RT #89992)
    - add procedural call tests for upload and uploadInfo to confirm these work
      as should (RT #91136)

    [ DOCUMENTATION ]
    - tweak perldoc for -utf8 option (RT #54341, thanks to Helmut Richter)
    - explain the HTML generation functions should no longer be used and that
      they may be deprecated in a future release

4.03 2014-07-02

    [ REMOVED / DEPRECATIONS ]
    - the -multiple option to popup_menu is now IGNORED as this did not
      function correctly. If you require a menu with multiple selections
      use the scrolling_list method. (RT #30057)

    [ SPEC / BUG FIXES ]
    - support redirects in mod_perl2, or fall back to using env variable
      for up to 5 redirects, when getting the query string (RT #36312)
    - CGI::Cookie now correctly supports the -max-age argument, previously
      if this was passed the value of the -expires argument would be used
      meaning there was no way to supply *only* this argument (RT #50576)
    - make :all actually import all methods, except for :cgi-lib, and add
      :ssl to the :standard import (RT #70337)

    [ DOCUMENTATION ]